# tw_oauth_demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml
tw_oauth_demo/: .env.sample  Cargo.toml
tw_oauth_demo/src/: app_config.rs  app_error.rs  handler.rs  lib.rs  main.rs  oauth.rs  twitter.rs  view.rs
tw_oauth_demo/src/handler/: auth_handler.rs  home_handler.rs
tw_oauth_demo/src/oauth/: auth.rs  error.rs  info.rs  request.rs  string_pair.rs  temporary_credential.rs  token_credential.rs
tw_oauth_demo/src/twitter/: api.rs  handler.rs
tw_oauth_demo/src/twitter/api/: api_access_token.rs  api_request_token.rs  api_verify_credentials.rs
tw_oauth_demo/src/twitter/handler/: auth_and_verify.rs  request_auth.rs
tw_oauth_demo/src/twitter/model/: user.rs
tw_oauth_demo/src/view/: home_view.rs
tw_oauth_demo/template/: home.html.hbs
